# authscan

./: .gitignore  AUDIT_REMEDIATION_PLAN.md  AUTH-SCAN-SPEC.md  Makefile  README.md  Web-App-Auth-Security-CLI-Tool-Guide.md  pyproject.toml
.github/workflows/: ci.yml
docs/: integration-targets.md
src/auth_scan/: __init__.py  cli.py
src/auth_scan/attacks/: __init__.py  api_key.py  base.py  brute.py  jwt_analyzer.py  mfa.py  oauth.py  session_tests.py  websocket_auth.py
src/auth_scan/core/: __init__.py  agentic.py  attack_surface.py  config.py  engine.py  exceptions.py  http_client.py  login.py  path_discovery.py  reporter.py  session.py
src/auth_scan/data/: __init__.py  default_creds.txt
tests/: conftest.py  test_cli_dispatch.py  test_http_downgrade.py  test_pr10_jwt_perf.py  test_pr11_reporter_polish.py  test_pr5_functional.py  test_pr7_hardening.py  test_pr8_misc.py  test_redaction.py  test_redirect_scope.py
tests/attacks/: test_api_key.py  test_brute.py  test_jwt_analyzer.py  test_mfa.py  test_oauth.py  test_oauth_discovery.py  test_session_tests.py  test_websocket_auth.py
tests/core/: test_agentic.py  test_attack_surface.py  test_auth_phase.py  test_config.py  test_engine.py  test_http_client.py  test_login.py  test_path_discovery.py  test_reporter.py  test_session.py
tests/fixtures/vuln_app/: README.md  app.py
tests/integration/: __init__.py  conftest.py  test_vuln_app_e2e.py
